# Shisui

./: COMO_USAR_NO_ANDROIDIDE.txt  PATCH_INSTRUCOES.txt  PATCH_INSTRUCOES_V2.8.txt  PATCH_INSTRUCOES_V2.9.txt  PATCH_INSTRUCOES_V3.0.txt  PATCH_INSTRUCOES_V3.1.txt  PATCH_INSTRUCOES_V3.2.txt  PATCH_INSTRUCOES_V3.3.2.txt  PATCH_INSTRUCOES_V3.3.3.txt  PATCH_INSTRUCOES_V3.3.5.txt  PATCH_INSTRUCOES_V3.3.txt  PATCH_INSTRUCOES_V3.4.txt  PATCH_INSTRUCOES_V3.5.txt  PATCH_INSTRUCOES_V3.6.1.txt  PATCH_INSTRUCOES_V3.6.txt  PATCH_INSTRUCOES_V3.7.txt  README.md  gradle.properties  settings.gradle  vortek-2.1.tzst
.github/workflows/: build-dxvk-mali.yml  build-native.yml  build-vortek-wrapper.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bruno/frameoverlay/: BrunoApp.java  CaptureService.java  ControlBubbleView.java  ControlPanelView.java  CrashLogger.java  FpsHudView.java  LosslessDllManager.java  LsfgConfig.java  MainActivity.java  NativeLsfgBridge.java  OverlayView.java  ShizukuFpsPermission.java  SpirvExtractor.java  SurfaceFlingerFpsReader.java
app/src/main/jniLibs/arm64-v8a/: COLOQUE_libbrunolsfg.so_AQUI.txt
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
native/: CMakeLists.txt  brunolsfg_native.cpp
src/: vortek_mali_wrapper.c
src/tools/: repack_vortek_local.sh
src/tools/.github/workflows/.github/workflows/: build-vortek-wrapper.yml
